Pluggable LocaleResolver